--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -418,7 +418,7 @@ jobs:
 
   report:
     needs: execute-case
-    if: ${{ (success() || (failure() && github.run_attempt >= 5)) }}
+    if: ${{ github.event_name == 'schedule' && (success() || (failure() && github.run_attempt >= 5)) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -538,7 +538,7 @@ jobs:
                   fi
                 elif [[ ! -z `echo $test | jq 'select(.skipped==true)'` || ! -z `echo $test | jq 'select(.pending==true)'` ]]; then
                   skipped=$((skipped+1))
-                  label="<span style=\\\"background-color: #D4DBDE;color:white;font-weight:bold;\\\">SKIPPED</span>"
+                  label="<span style=\\\"background-color: #839496;color:white;font-weight:bold;\\\">SKIPPED</span>"
                 fi
                 
                 row="<tr> <td style=\\\"text-align: left;\\\">$url</td> <td style=\\\"text-align: left;\\\">$name</td> <td style=\\\"text-align: center;\\\">$target_type</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$((duration/1000)) sec</td> </tr>"
@@ -569,7 +569,7 @@ jobs:
           fi
 
           echo "body=$body" >> $GITHUB_OUTPUT
-          echo "to=zhiyou@microsoft.com" >> $GITHUB_OUTPUT
+          echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail to the whole team
