--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-bot/expected/app.local.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-bot/expected/app.local.yml
@@ -26,7 +26,7 @@ provision:
         - name: m365extensions
 
 configureApp:
-  - uses: teamsApp/validate
+  - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
       manifestPath: ./appPackage/manifest.json # Path to manifest template
 
