--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -345,15 +345,15 @@ jobs:
 
       - name: Upload test report
         uses: actions/upload-artifact@v2
-        if: ${{ failure() }}
+        if: ${{ github.event_name != 'schedule' || success() || (failure() && github.run_attempt >= 5) }}
         with:
-          name: ${{ steps.get-report-name.outputs.name }}.json
+          name: ${{ steps.get-report-name.outputs.name }}
           path: |
             ./packages/cli/tests/e2e/mochawesome-report/mochawesome.json
 
       - name: Upload perf metrics
         uses: actions/upload-artifact@v2
-        if: ${{ always() }}
+        if: ${{ github.event_name != 'schedule' || success() || (failure() && github.run_attempt >= 5) }}
         with:
           name: ${{ steps.get-report-name.outputs.name }}_metrics
           path: |
@@ -465,11 +465,15 @@ jobs:
           cases=`echo $jobs| jq -r '.[] | select(.name | contains("tests.ts")) | .name'`
 
 
-          lists=""
           passed=0
           failed=0
+          skipped=0
+          passed_lists=""
+          failed_lists=""
+          skipped_lists=""
 
           emails="vsciotadt@microsoft.com;teamsfxqa@microsoft.com;"
+          echo $emails
           while IFS= read -r case;
           do
             if [ -z "$case" ]; then
@@ -499,33 +503,11 @@ jobs:
               duration=`dateutils.ddiff $started_at $completed_at -f "%Mm %Ss"`
             fi
 
-            status=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .conclusion'`
-
-            if [[ ! -z "$email" && ! "$emails" == *"$email"* && "$status" == "failure" ]]; then
-              emails="$emails;$email"
-            fi
-
             author=""
             if [ -z "$email" ]; then
               author="N/A"
             else
               author="<a href=\\\"mailto:$email\\\"><span>$email</span></a>"
-            fi
-
-            lable=""
-            if [ "$status" == "success" ]; then
-              passed=$((passed+1))
-              label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
-            else
-              failed=$((failed+1))
-              label="<span style=\\\"background-color: #dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
-            fi
-
-            job_id=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .id'`
-            metrics_file=`find ~/artifacts -wholename "*${job_id}_metrics/output.txt"`
-            slow_count=0
-            if [ ! -z "$metrics_file" ]; then
-              slow_count=`grep -c '"severity":"slow"' $metrics_file || true`
             fi
 
             url=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .html_url'`
@@ -536,23 +518,49 @@ jobs:
               target_type=".NET"
             fi
 
-            row="<tr> <td style=\\\"text-align: left;\\\">$url</td> <td style=\\\"text-align: center;\\\">$target_type</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td style=\\\"text-align: center;\\\">$duration</td> <td style=\\\"text-align: center;\\\">$slow_count</td> </tr>"
-
-            if [ "$status" == "success" ]; then
-              lists="$lists $row"
-            else
-              lists="$row $lists"
+            job_id=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .id'`
+            report_file=`find ~/artifacts -wholename "*${job_id}/mochawesome.json"`
+            if [ ! -z "$report_file" ]; then
+              tests=`cat $report_file | jq -cr '[ .. | objects | with_entries(select(.key=="tests")) | select(. != {}) | select(.tests | type=="array") ] | map(.tests | .[]) | .[]'`
+              lable=""
+              while IFS= read -r test;
+              do
+                name=`echo $test | jq -cr .fullTitle`
+                duration=`echo $test | jq -cr .duration`
+                if [[ ! -z `echo $test | jq 'select(.pass==true)'` ]]; then
+                  passed=$((passed+1))
+                  label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
+                elif [[ ! -z `echo $test | jq 'select(.fail==true)'` ]]; then
+                  failed=$((failed+1))
+                  label="<span style=\\\"background-color: #dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
+                  if [[ ! -z "$email" && ! "$emails" == *"$email"* ]]; then
+                    emails="$emails;$email"
+                  fi
+                elif [[ ! -z `echo $test | jq 'select(.skipped==true)'` || ! -z `echo $test | jq 'select(.pending==true)'` ]]; then
+                  skipped=$((skipped+1))
+                  label="<span style=\\\"background-color: #839496;color:white;font-weight:bold;\\\">SKIPPED</span>"
+                fi
+                
+                row="<tr> <td style=\\\"text-align: left;\\\">$url</td> <td style=\\\"text-align: left;\\\">$name</td> <td style=\\\"text-align: center;\\\">$target_type</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$((duration/1000)) sec</td> </tr>"
+                if [[ ! -z `echo $test | jq 'select(.pass==true)'` ]]; then
+                  passed_lists="$passed_lists $row"
+                elif [[ ! -z `echo $test | jq 'select(.fail==true)'` ]]; then
+                  failed_lists="$failed_lists $row"
+                elif [[ ! -z `echo $test | jq 'select(.skipped==true)'` || ! -z `echo $test | jq 'select(.pending==true)'` ]]; then
+                  skipped_lists="$skipped_lists $row"
+                fi
+              done <<< $tests
             fi
 
           done <<< $cases
 
-          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr> <th>CASE</th> <th>TARGET TYPE</th> <th>STATUS</th> <th>AUTHOR</th> <th>DURATION</th> <th>SLOW METHOD( > 20ms )</th> </tr> $lists </table> <br />"
+          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr> <th>PATH</th> <th>CASE</th> <th>TARGET TYPE</th> <th>STATUS</th> <th>AUTHOR</th> <th>DURATION</th> </tr> $failed_lists $passed_lists $skipped_lists </table> <br />"
 
-          total=$((passed+failed))
+          total=$((passed+failed+skipped))
 
-          subject="TeamsFx E2E Test Report ($passed/$total Passed)"
+          subject="TeamsFx E2E Test Report ($passed/$total Passed, $failed/$total Failed, $skipped/$total Skipped)"
           if [[ "${{env.v3_flag}}" == "true" ]]; then
-            subject="TeamsFx E2E V3 Test Report ($passed/$total Passed)"
+            subject="TeamsFx E2E V3 Test Report ($passed/$total Passed, $failed/$total Failed, $skipped/$total Skipped)"
           fi
           if [ $failed -gt 0 ]; then
             subject="[FAILED] $subject"
