--- a/templates/scenarios/common/init-debug-vsc-bot/teamsapp.local.yml
+++ b/templates/scenarios/common/init-debug-vsc-bot/teamsapp.local.yml
@@ -50,7 +50,7 @@ deploy:
     with:
       args: install -D env-cmd
 
-  - uses: file/updateEnv # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
     with:
       target: ./.localSettings
       envs:
