--- a/.github/workflows/vscode-marketplace.yml
+++ b/.github/workflows/vscode-marketplace.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       run_id:
-        description: 'Input the CD pipeline run ID to fetch the artifact'
+        description: "Input the CD pipeline run ID to fetch the artifact"
         required: true
-        default: ''
+        default: ""
       isPreview:
-        description: 'Publish VSIX as a preview version(yes or no)'
+        description: "Publish VSIX as a preview version(yes or no)"
         required: true
-        default: 'no'
+        default: "no"
 
 jobs:
   publish-to-vscode-marketplace:
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - name: Setup node
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
 
@@ -36,7 +36,7 @@ jobs:
           workflow: cd.yml
           path: .
 
-      - name: release preview 
+      - name: release preview
         if: ${{ github.event.inputs.isPreview != 'no' }}
         env:
           PAT: ${{ secrets.VSCE_PAT }}
