--- a/.github/workflows/cd_trigger.yml
+++ b/.github/workflows/cd_trigger.yml
@@ -81,8 +81,7 @@ jobs:
               console.log("=========== stable")
               return "stable"
             }
-        
-            
+
   CallAzurePipeline:
     runs-on: ubuntu-latest
     needs: DownloadAndOutput
@@ -95,28 +94,29 @@ jobs:
           azure-pipeline-name: TeamsFx-Dev17-CD
           azure-devops-token: ${{ secrets.VS_ADO_PAT }}
           azure-pipeline-variables: '{"PreId": ${{needs.downloadAndOutput.outputs.pre_id}}, "ServerVersion": ${{needs.downloadAndOutput.outputs.server_version}}, "zipLink": ${{needs.downloadAndOutput.outputs.zipLink}}}'
-  
+
   CheckSetupSuccess:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           token: ${{ secrets.CD_PAT }}
           ref: ${{ github.event.workflow_run.head_branch }}
+
       - name: Setup node
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
           node-version: 14
       - name: Setup project
         id: setup
-        run: 
-          npm run setup
+        run: npm run setup
         continue-on-error: true
-      - name: Info 
+      - name: Info
         if: steps.setup.outcome != 'success'
         run: |
           echo "`npm run setup` failed after current project finish CD,\
            it may be the inconsistency of package dependencies caused by separate release,\
            please confirm this problem will not affect the CI of subsequent PRs."
+
