--- a/.github/workflows/dotnetsdk-ci.yml
+++ b/.github/workflows/dotnetsdk-ci.yml
@@ -3,11 +3,11 @@ name: DotNet SDK CI
 on:
   push:
     paths:
-    - 'packages/dotnet-sdk/**'
+      - "packages/dotnet-sdk/**"
     branches: [main, dev, prerelease]
   pull_request:
     paths:
-      - 'packages/dotnet-sdk/**'
+      - "packages/dotnet-sdk/**"
     branches: [main, dev, prerelease]
   workflow_dispatch:
 
@@ -17,18 +17,15 @@ defaults:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.x
-    - name: Build
-      run:
-        dotnet build -c Release Microsoft.TeamsFx.sln
-    - name: Test
-      run:
-        dotnet test Microsoft.TeamsFx.sln
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.x
+      - name: Build
+        run: dotnet build -c Release Microsoft.TeamsFx.sln
+      - name: Test
+        run: dotnet test Microsoft.TeamsFx.sln
