--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-server",
-  "version": "1.2.4",
+  "version": "2.0.0-alpha",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
