--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -93,7 +93,7 @@
   "dependencies": {
     "@azure/identity": "^3.1.3",
     "@microsoft/teamsfx-api": "^0.22.1",
-    "@microsoft/teamsfx-core": "^1.23.1",
+    "@microsoft/teamsfx-core": "^2.0.0-alpha",
     "fs-extra": "^9.1.0",
     "underscore": "^1.12.1",
     "validator": "^13.7.0",
