chore: open feature flag

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Unit Test
         run: |
-          xvfb-run -a npx lerna run test:unit --stream
+          xvfb-run -a npx lerna run test:unit --stream --no-bail
 
       - name: CodeCov report attempt 1
         id: codecov1
