--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -470,14 +470,15 @@ jobs:
               target_type=".NET"
             fi
 
+            echo $case
             name="${case//'.tests.ts'/}"
             name="${name//.\//}"
             name="${name//\//_}"
             job_id=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .id'`
             report_file=`find ~/artifacts -wholename "*${name}/mochawesome.json"`
-            echo "Tried to find the $report_file with $job_id"
+            echo "Tried to find the $report_file with $job_id with $name"
             if [ ! -z "$report_file" ]; then
-              echo "Found the $report_file with $job_id"
+              echo "Found the $report_file with $job_id with $name"
               tests=`cat $report_file | jq -cr '[ .. | objects | with_entries(select(.key=="tests")) | select(. != {}) | select(.tests | type=="array") ] | map(.tests | .[]) | .[]'`
               lable=""
               while IFS= read -r test;
@@ -508,7 +509,7 @@ jobs:
                 fi
               done <<< $tests
             else
-              echo "Failed to find the $report_file with $job_id"
+              echo "Failed to find the $report_file with $job_id with $name"
             fi
 
           done <<< $cases
