--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -317,7 +317,7 @@ jobs:
 
       - name: Upload test report
         uses: actions/upload-artifact@v2
-        if: ${{ success() || (failure() && github.run_attempt >= 2) }}
+        if: ${{ github.event_name != 'schedule' || success() || (failure() && github.run_attempt >= 5) }}
         with:
           name: ${{ steps.get-report-name.outputs.name }}
           path: |
@@ -367,7 +367,7 @@ jobs:
 
   rerun:
     needs: tear-down
-    if: ${{ failure() && github.run_attempt < 2 }}
+    if: ${{ github.event_name == 'schedule' && failure() && github.run_attempt < 5 }}
     runs-on: ubuntu-latest
     steps:
       - name: rerun
@@ -382,7 +382,7 @@ jobs:
 
   report:
     needs: execute-case
-    if: ${{ (success() || (failure() && github.run_attempt >= 2)) }}
+    if: ${{ github.event_name == 'schedule' && (success() || (failure() && github.run_attempt >= 5)) }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -392,10 +392,6 @@ jobs:
         run: |
           sudo apt install dateutils
 
-      - name: Install Dateutils
-        run: |
-          sudo apt install tree
-
       - uses: actions/download-artifact@v3
         with:
           path: ~/artifacts
@@ -404,7 +400,6 @@ jobs:
         id: list-jobs
         working-directory: packages/cli
         run: |
-          tree ~/artifacts
           page=1
           jobs="[]"
 
@@ -469,15 +464,13 @@ jobs:
               target_type=".NET"
             fi
 
-            echo $case
             name="${case//'.tests.ts'/}"
             name="${name//.\//}"
             name="${name//\//_}"
             job_id=`echo $jobs | jq --arg case $case -r '.[] | select(.name == $case ) | .id'`
             report_file=`find ~/artifacts -wholename "*${name}*/mochawesome.json"`
-            echo "Tried to find the $report_file with $job_id with $name"
             if [ ! -z "$report_file" ]; then
-              echo "Found the $report_file with $job_id with $name"
+              echo "Found the $report_file with $job_id and $name"
               tests=`cat $report_file | jq -cr '[ .. | objects | with_entries(select(.key=="tests")) | select(. != {}) | select(.tests | type=="array") ] | map(.tests | .[]) | .[]'`
               lable=""
               while IFS= read -r test;
@@ -508,7 +501,7 @@ jobs:
                 fi
               done <<< $tests
             else
-              echo "Failed to find the $report_file with $job_id with $name"
+              echo "Failed to find the $report_file with $job_id and $name"
             fi
 
           done <<< $cases
@@ -525,7 +518,7 @@ jobs:
           fi
 
           echo "body=$body" >> $GITHUB_OUTPUT
-          echo "to=zhiyou@microsoft.com" >> $GITHUB_OUTPUT
+          echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail to the whole team
