--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/csharpSsoTab/expectedResult/app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/csharpSsoTab/expectedResult/app.yml
@@ -15,10 +15,9 @@ provision:
          deploymentName: teams_toolkit_deployment # Required when deploy ARM template
       bicepCliVersion: v0.4.613 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
     # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
-  - uses: file/updateEnv # Add additional item to .env file
+  - uses: script # Add additional item to .env file
     with:
-      envs:
-        PROVISIONOUTPUT__AZUREWEBAPPTABOUTPUT__INDEXPATH: '/' # Used in appPackage/manifest.json file.
+      run: ::set-output PROVISIONOUTPUT__AZUREWEBAPPTABOUTPUT__INDEXPATH=/ # Used in appPackage/manifest.json file.
 
 deploy:
   - uses: cli/runDotnetCommand
